--- a/sytle.css
+++ b/sytle.css
@@ -1,5 +1,6 @@
 body{
-background: grey;
+background-image:url(/image/loan.svg);
+
 padding: 0;
 margin: 0;
 display: flex;
@@ -10,8 +11,8 @@ font-family: 'Courier New', Courier, monospace;
 }
 
 .container{
-    background:rgb(59, 40, 40);
-    color: rgb(218, 224, 230);
+    background:rgb(112, 140, 216);
+    color: rgb(10, 42, 73);
     padding: 20px;
     border-radius: 10px;
 }
